fix-test-performance-batch