@@ -13,20 +13,23 @@ import com.astropay.domain.model.user.Role;
 import com.astropay.domain.model.user.User;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -35,14 +38,15 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 class TransferBatchProcessorTest {
 
     @Mock
@@ -58,6 +62,11 @@ class TransferBatchProcessorTest {
 
     @InjectMocks
     private TransferBatchProcessor batchProcessor;
+
+    @Captor
+    private ArgumentCaptor<List<Transaction>> transactionListCaptor;
+    @Captor
+    private ArgumentCaptor<List<OutboxEvent>> outboxEventListCaptor;
 
     private Account senderAccount;
     private Account receiverAccount;
@@ -86,53 +95,101 @@ class TransferBatchProcessorTest {
         ReflectionTestUtils.setField(validEvent, "id", UUID.randomUUID());
     }
 
+    @AfterEach
+    void tearDown() {
+        Mockito.reset(outboxEventRepository, transactionRepository, accountRepository, transactionAuditService);
+    }
+
     @Test
     @DisplayName("Should process a valid batch of events successfully")
     void shouldProcessValidBatch() {
-        // Arrange
-        when(accountRepository.findByIds(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(Collections.emptyList());
 
-        // Act
         batchProcessor.processBatch(List.of(validEvent));
 
-        // Assert
-        ArgumentCaptor<List<Transaction>> transactionCaptor = ArgumentCaptor.forClass(List.class);
-        verify(transactionRepository, times(2)).saveAll(transactionCaptor.capture());
-
-        // Check final state of the transaction
-        assertEquals(TransactionStatus.SUCCESS, transactionCaptor.getAllValues().get(1).get(0).getStatus());
+        verify(transactionRepository, times(2)).saveAll(transactionListCaptor.capture());
+        
+        assertEquals(TransactionStatus.SUCCESS, transactionListCaptor.getAllValues().get(1).getFirst().getStatus());
 
         assertEquals(new BigDecimal("100.00"), senderAccount.getBalance());
         assertEquals(new BigDecimal("150.00"), receiverAccount.getBalance());
 
-        ArgumentCaptor<List<Account>> accountCaptor = ArgumentCaptor.forClass(List.class);
-        verify(accountRepository).saveAll(accountCaptor.capture());
-        assertEquals(2, accountCaptor.getValue().size());
+        // CORREÇÃO: Usar any() pois values() retorna Collection, não List
+        verify(accountRepository).saveAll(any());
 
+        verify(outboxEventRepository).deleteAllInBatch(List.of(validEvent));
+    }
+
+    @Test
+    @DisplayName("Should fallback to individual processing on batch failure")
+    void shouldFallbackToIndividualProcessingOnBatchFailure() {
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(Collections.emptyList());
+        
+        doThrow(new DataIntegrityViolationException("Duplicate key"))
+            .doReturn(Collections.emptyList()) 
+            .when(transactionRepository).saveAll(anyList());
+
+        batchProcessor.processBatch(List.of(validEvent));
+
+        verify(transactionRepository).save(any(Transaction.class));
+        verify(transactionRepository, times(2)).saveAll(anyList());
+        
+        // CORREÇÃO: Usar any() pois values() retorna Collection, não List
+        verify(accountRepository).saveAll(any());
+        
+        verify(outboxEventRepository).deleteAllInBatch(List.of(validEvent));
+    }
+
+    @Test
+    @DisplayName("Should skip duplicate transaction if it already exists (caught by pre-filter)")
+    void shouldSkipDuplicateTransaction() {
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        
+        UUID knownId = UUID.randomUUID();
+        try {
+            Map<String, Object> payloadMap = Map.of(
+                "senderAccountId", 1L,
+                "receiverAccountId", 2L,
+                "amount", "100.00",
+                "idempotencyKey", knownId.toString()
+            );
+            String payload = objectMapper.writeValueAsString(payloadMap);
+            validEvent = new OutboxEvent("Transfer", knownId.toString(), "TransferRequested", payload);
+            ReflectionTestUtils.setField(validEvent, "id", UUID.randomUUID());
+        } catch (Exception e) { throw new RuntimeException(e); }
+
+        Transaction duplicateTx = new Transaction(senderAccount, receiverAccount, BigDecimal.TEN, knownId);
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(List.of(duplicateTx));
+
+        batchProcessor.processBatch(List.of(validEvent));
+
+        verify(transactionRepository, never()).saveAll(anyList());
+        verify(transactionRepository, never()).save(any(Transaction.class));
         verify(outboxEventRepository).deleteAllInBatch(List.of(validEvent));
     }
 
     @Test
     @DisplayName("Should handle insufficient balance and fail the transaction")
     void shouldHandleInsufficientBalance() {
-        // Arrange
-        senderAccount.adjustBalance(new BigDecimal("50.00")); // Not enough balance
-        when(accountRepository.findByIds(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        senderAccount.adjustBalance(new BigDecimal("50.00"));
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(Collections.emptyList());
 
-        // Act
         batchProcessor.processBatch(List.of(validEvent));
 
-        // Assert
-        ArgumentCaptor<List<Transaction>> transactionCaptor = ArgumentCaptor.forClass(List.class);
-        verify(transactionRepository, times(2)).saveAll(transactionCaptor.capture());
-
-        Transaction finalTransaction = transactionCaptor.getAllValues().get(1).get(0);
+        verify(transactionRepository, times(2)).saveAll(transactionListCaptor.capture());
+        
+        Transaction finalTransaction = transactionListCaptor.getAllValues().get(1).getFirst();
         assertEquals(TransactionStatus.FAILED, finalTransaction.getStatus());
         assertTrue(finalTransaction.getFailureReason().contains("Insufficient balance"));
 
-        // Balances should not have changed
         assertEquals(new BigDecimal("50.00"), senderAccount.getBalance());
         assertEquals(new BigDecimal("50.00"), receiverAccount.getBalance());
+
+        // CORREÇÃO: Usar any() pois values() retorna Collection, não List
+        verify(accountRepository).saveAll(any());
 
         verify(outboxEventRepository).deleteAllInBatch(List.of(validEvent));
     }
@@ -140,17 +197,12 @@ class TransferBatchProcessorTest {
     @Test
     @DisplayName("Should mark event as FAILED if an account is not found")
     void shouldFailEventIfAccountNotFound() {
-        // Arrange
-        when(accountRepository.findByIds(anyList())).thenReturn(List.of(senderAccount)); // Receiver is missing
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount));
 
-        // Act
         batchProcessor.processBatch(List.of(validEvent));
 
-        // Assert
-        ArgumentCaptor<List<OutboxEvent>> failedEventsCaptor = ArgumentCaptor.forClass(List.class);
-        verify(outboxEventRepository).saveAll(failedEventsCaptor.capture());
-        
-        OutboxEvent failedEvent = failedEventsCaptor.getValue().get(0);
+        verify(outboxEventRepository).saveAll(outboxEventListCaptor.capture());
+        OutboxEvent failedEvent = outboxEventListCaptor.getValue().getFirst();
         assertEquals(OutboxEventStatus.FAILED, failedEvent.getStatus());
         
         verify(transactionRepository, never()).saveAll(any());
@@ -159,37 +211,35 @@ class TransferBatchProcessorTest {
     @Test
     @DisplayName("Should retry event on unexpected error")
     void shouldRetryEventOnUnexpectedError() {
-        // Arrange
-        when(accountRepository.findByIds(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
-        // Use any() to be more generic and avoid stubbing issues
-        doThrow(new RuntimeException("Database connection failed")).when(accountRepository).saveAll(any());
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(Collections.emptyList());
+        doThrow(new RuntimeException("Audit service failed")).when(transactionAuditService).createAuditEvent(any(), anyString());
 
-        // Act
         batchProcessor.processBatch(List.of(validEvent));
 
-        // Assert
         assertEquals(1, validEvent.getRetryCount());
         assertEquals(OutboxEventStatus.UNPROCESSED, validEvent.getStatus());
+
+        verify(outboxEventRepository).saveAll(outboxEventListCaptor.capture());
+        assertEquals(validEvent, outboxEventListCaptor.getValue().getFirst());
+
         verify(outboxEventRepository, never()).deleteAllInBatch(any());
     }
 
     @Test
     @DisplayName("Should mark event as FAILED after max retries")
     void shouldFailEventAfterMaxRetries() {
-        // Arrange
         validEvent.setRetryCount(4);
-        when(accountRepository.findByIds(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
-        doThrow(new RuntimeException("Database connection failed")).when(accountRepository).saveAll(any());
+        when(accountRepository.findByIdsAndLock(anyList())).thenReturn(List.of(senderAccount, receiverAccount));
+        when(transactionRepository.findAllByIdempotencyKeyIn(anyList())).thenReturn(Collections.emptyList());
+        doThrow(new RuntimeException("Audit service failed")).when(transactionAuditService).createAuditEvent(any(), anyString());
 
-        // Act
         batchProcessor.processBatch(List.of(validEvent));
 
-        // Assert
         assertEquals(5, validEvent.getRetryCount());
         assertEquals(OutboxEventStatus.FAILED, validEvent.getStatus());
         
-        ArgumentCaptor<List<OutboxEvent>> failedEventsCaptor = ArgumentCaptor.forClass(List.class);
-        verify(outboxEventRepository).saveAll(failedEventsCaptor.capture());
-        assertTrue(failedEventsCaptor.getValue().stream().anyMatch(e -> e.getStatus() == OutboxEventStatus.FAILED));
+        verify(outboxEventRepository).saveAll(outboxEventListCaptor.capture());
+        assertTrue(outboxEventListCaptor.getValue().stream().anyMatch(e -> e.getStatus() == OutboxEventStatus.FAILED));
     }
 }
